@@ -376,19 +376,27 @@ public class WebtoonService {
     /**
      * 웹툰, 작가 검색
      */
-    public List<SearchedWebtoonResDto> searchWebtoon(String keyword) {
+    public SearchedWebtoonPageResDto searchWebtoon(
+        String keyword, boolean fromFirst, int page, int size) {
+
         if (keyword == null || keyword.trim().isEmpty()) {
             throw new WebtoonException(WebtoonExceptionType.SEARCH_KEYWORD_NOT_FOUND);
         }
 
         String normalizedKeyword = keyword.trim().toLowerCase();
-        List<Webtoon> webtoons = webtoonRepository.findByTitleOrMemberNickname(normalizedKeyword);
 
-        if (webtoons.isEmpty()) {
-            return List.of();
+        // fromFirst 값에 따라 정렬 기준 지정 (예시로 id 기준 오름차순/내림차순)
+        Sort sort = fromFirst ? Sort.by("id").ascending() : Sort.by("id").descending();
+        PageRequest pageable = PageRequest.of(page, size, sort);
+
+        Page<Webtoon> webtoonPage = webtoonRepository.findByTitleOrMemberNickname(normalizedKeyword,
+            pageable);
+
+        if (webtoonPage.isEmpty()) {
+            return SearchedWebtoonPageResDto.of(Collections.emptyList(), page, 0, 0);
         }
 
-        List<Long> webtoonIds = webtoons.stream()
+        List<Long> webtoonIds = webtoonPage.getContent().stream()
             .map(Webtoon::getId)
             .collect(Collectors.toList());
 
@@ -399,13 +407,20 @@ public class WebtoonService {
                 obj -> (Long) obj[1]
             ));
 
-        return webtoons.stream()
+        List<SearchedWebtoonResDto> results = webtoonPage.getContent().stream()
             .map(webtoon -> SearchedWebtoonResDto.of(
                 webtoon,
                 webtoon.getGenre().getName(),
                 webtoonIdToStars.getOrDefault(webtoon.getId(), 0L)
             ))
             .collect(Collectors.toList());
+
+        return SearchedWebtoonPageResDto.of(
+            results,
+            webtoonPage.getNumber(),
+            webtoonPage.getTotalPages(),
+            (int) webtoonPage.getTotalElements()
+        );
     }
 
     /**
